--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   font_awesome_flutter: ^8.10.0
   simple_animations:
+  swipedetector: ^1.2.0
 
 dev_dependencies:
   flutter_test:
